--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -3,4 +3,19 @@ body
     color: coral;
     text-align: center;
     font-family: "Arial";
+    font-size: 16px;
+}
+
+#container
+{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid khaki;
+    margin: 0 auto;
+}
+
+#container h1
+{
+    font-size: 20px;
 }
