--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -27,6 +27,9 @@ body
 
 .caja
 {
+    -webkit-box-shadow: 10px 10px 0px 0px rgba(0,0,0,0.69);
+    -moz-box-shadow: 10px 10px 0px 0px rgba(0,0,0,0.69);
+    box-shadow: 10px 10px 0px 0px rgba(0,0,0,0.69);
     position: relative;
     animation-name: slide;
     animation-duration: 3s;
