--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -2,7 +2,7 @@ body
 {
     color: coral;
     text-align: center;
-    font-family: "Courier";
+    font-family: "Arial";
     font-size: 16px;
 }
 
@@ -10,7 +10,7 @@ body
 {
     font-weight: bold;
     font-size: 25px;
-    font-family: 'Courier New', Courier, monospace;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     padding: 5px;
     margin: 0;
     background-color: khaki;
