--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ body
 
 #cabecera
 {
+    color: #06283D;
     font-weight: bold;
     font-size: 25px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
